# Filler

./: .gitignore  CMakeLists.txt  README.md
general/includes/: filler.h
general/libftprintf/: Makefile
general/libftprintf/includes/: libft.h
general/libftprintf/srcs/: ft_atoi.c  ft_get_next_line.c  ft_lstfind.c  ft_lstiter.c  ft_strisonlydigit.c
general/srcs/: fill_structure.c  main.c  service.c
resources/: filler.trace  output  output_mine
